--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-# Ignore everything
-*
-
-# But not these files...
-!README.md
-!LICENSE
-!.gitignore
-!dotsetup
-!default/
-!default/**
-
 # MacOS stuff
 .DS_Store
+
+# Submodules
+.gitmodules
