refactor(ideavimrc): removed leader for lsp binds
also added references bind

--- a/config/default/home/.ideavimrc
+++ b/config/default/home/.ideavimrc
@@ -30,7 +30,9 @@ map <Leader>/ <Action>(CommentByLineComment)
 vmap <Leader>/ <Action>(CommentByLineComment)
 map <Leader>e <Action>(ActivateProjectToolWindow)
 
-map <leader>gi <Action>(GotoImplementation)
-map <leader>gd <Action>(GotoDeclaration)
-map <leader>gD <Action>(GotoSuperMethod)
-map <leader>rn <Action>(RenameElement)
+map gd <Action>(GotoDeclaration)
+map gD <Action>(GotoSuperMethod)
+map gi <Action>(GotoImplementation)
+map gr <Action>(FindUsages)
+map <Leader>rn <Action>(RenameElement)
+map <Leader>D <Action>(QuickTypeDefinition)
