refactor(gitconfig): moved from studio to idea

--- a/config/default/home/.gitconfig
+++ b/config/default/home/.gitconfig
@@ -41,7 +41,7 @@
 	tool = intellij
 
 [mergetool "intellij"]
-	cmd = studio merge \
+	cmd = idea merge \
 		"$(pwd)/$LOCAL" \
 		"$(pwd)/$REMOTE" \
 		"$(pwd)/$BASE" \
