refactor(warp-binds): added new binds for blocks

--- a/config/default/warp-bindings/.warp/keybindings.yaml
+++ b/config/default/warp-bindings/.warp/keybindings.yaml
@@ -1,13 +1,20 @@
 ---
-"workspace:reset_font_size": none
-"input:toggle_ai_ask_follow_up": none
-"notebookview:decrease_font_size": none
-"terminal:ask_ai_assistant": none
-"workspace:toggle_ai_assistant": none
-"editor_view:cmd_down": cmd-j
-"notebookview:increase_font_size": none
-"workspace:decrease_font_size": none
 "workspace:increase_font_size": none
 "notebookview:reset_font_size": none
-"input:open_completion_suggestions": tab
+"ai_assistant_panel:reset_context": none
+"terminal:scroll_to_bottom_of_selected_block": shift-cmd-J
+"notebookview:decrease_font_size": none
+"workspace:decrease_font_size": none
 "input:toggle_input_type": none
+"input:open_completion_suggestions": tab
+"notebookview:increase_font_size": none
+"editor:edit_link": none
+"editor_view:clear_lines": alt-shift-cmd-K
+"editor_view:cmd_down": cmd-j
+"terminal:select_next_block": alt-cmd-j
+"workspace:reset_font_size": none
+"terminal:select_previous_block": alt-cmd-k
+"input:toggle_ai_ask_follow_up": none
+"workspace:toggle_ai_assistant": none
+"terminal:scroll_to_top_of_selected_block": shift-cmd-K
+"terminal:ask_ai_assistant": none
