--- a/config/default/home/.yabairc
+++ b/config/default/home/.yabairc
@@ -1,32 +1,17 @@
-# default layout (can be bsp, stack or float)
-yabai -m config layout bsp
-
-# new window spawns to the right if vertical split, or bottom if horizontal split
-yabai -m config window_placement second_child
-
-# padding
-yabai -m config top_padding 0
-yabai -m config bottom_padding 0
-yabai -m config left_padding 0
-yabai -m config right_padding 0
-yabai -m config window_gap 1
-
-# -- mouse settings --
-
-# center mouse on window with focus
-yabai -m config mouse_follows_focus on
-
-# modifier for clicking and dragging with mouse
-yabai -m config mouse_modifier ctrl
-
-# set modifier + left-click drag to move window
-yabai -m config mouse_action1 move
-
-# set modifier + right-click drag to resize window
-yabai -m config mouse_action2 resize
-
-# when window is dropped in center of another window, swap them (on edges it will split it)
-yabai -m mouse_drop_action swap
+yabai -m config                                 \
+    mouse_follows_focus          on             \
+    window_placement             second_child   \
+    insert_feedback_color        0xffd75f5f     \
+    top_padding                  00             \
+    bottom_padding               00             \
+    left_padding                 00             \
+    right_padding                00             \
+    window_gap                   01             \
+    layout                       bsp            \
+    mouse_modifier               fn             \
+    mouse_action1                move           \
+    mouse_action2                resize         \
+    mouse_drop_action            swap
 
 # disable specific apps
 yabai -m rule --add app="^System Settings$" manage=off
