--- a/config/default/home/.yabairc
+++ b/config/default/home/.yabairc
@@ -17,6 +17,7 @@ yabai -m config                                 \
 yabai -m rule --add app="^Arc$" manage=off
 yabai -m rule --add app="^Bitwarden$" manage=off
 yabai -m rule --add app="^Finder$" manage=off
+yabai -m rule --add app="^Ghostty$" manage=off
 yabai -m rule --add app="^Keka$" manage=off
 yabai -m rule --add app="^QuickTime Player$" manage=off
 yabai -m rule --add app="^Raycast$" manage=off
