--- a/config/default/ghostty/.config/ghostty/config
+++ b/config/default/ghostty/.config/ghostty/config
@@ -25,12 +25,14 @@ window-width = 145
 # window-height = 35
 # window-width = 140
 
+window-padding-x = 8,2
+window-padding-y = 2,5
+
 copy-on-select = false
 mouse-hide-while-typing = true
 shell-integration-features = no-cursor,no-sudo,title
 confirm-close-surface = false
 
-keybind = ctrl+k=clear_screen
 keybind = cmd+k=jump_to_prompt:-1
 keybind = cmd+j=jump_to_prompt:1
 keybind = super+equal=ignore
