refactor(ghosty): qol for multiline fzf-git-extensions
mutate ctrl tab to tab & ignore shift variation

--- a/config/default/ghostty/.config/ghostty/config
+++ b/config/default/ghostty/.config/ghostty/config
@@ -39,6 +39,8 @@ keybind = super+equal=ignore
 keybind = super+plus=ignore
 keybind = super+minus=ignore
 keybind = super+zero=ignore
+keybind = ctrl+tab=text:\x09
+keybind = ctrl+shift+tab=ignore
 
 macos-titlebar-style = tabs
 macos-option-as-alt = true
