refactor(ideavim): move lsp binds to default nvim like

--- a/config/default/ideavim/.ideavimrc
+++ b/config/default/ideavim/.ideavimrc
@@ -28,11 +28,11 @@ map <Leader>fs <Action>(GotoSymbol)
 map <Leader>fa <Action>(GotoAction)
 map <Leader>/ <Action>(CommentByLineComment)
 vmap <Leader>/ <Action>(CommentByLineComment)
-map <Leader>e <Action>(ActivateProjectToolWindow)
+map <C-n> <Action>(ActivateProjectToolWindow)
 
 map gd <Action>(GotoDeclaration)
 map gD <Action>(GotoSuperMethod)
-map gi <Action>(GotoImplementation)
-map gr <Action>(FindUsages)
-map <Leader>rn <Action>(RenameElement)
-map <Leader>D <Action>(QuickTypeDefinition)
+map grr <Action>(FindUsages)
+map gri <Action>(GotoImplementation)
+map grn <Action>(RenameElement)
+map grt <Action>(QuickTypeDefinition)
