--- a/config/default/ghostty/.config/ghostty/config
+++ b/config/default/ghostty/.config/ghostty/config
@@ -30,7 +30,7 @@ window-padding-y = 2,5
 
 copy-on-select = false
 mouse-hide-while-typing = true
-shell-integration-features = no-cursor,no-sudo,title
+shell-integration-features = no-cursor,no-sudo,title,ssh-env
 confirm-close-surface = false
 
 keybind = cmd+k=jump_to_prompt:-1
