--- a/config/default/zsh/.tmux.conf
+++ b/config/default/zsh/.tmux.conf
@@ -34,7 +34,7 @@ set-option -g status-keys emacs
 set-option -g focus-events on
 
 ## super useful when using "grouped sessions" and multi-monitor setup
-set-window-option -g aggressive-resize on
+setw -g aggressive-resize on
 
 # -- Keybinds --
 
