fix(config/default/zsh/tmux): set modes keys to vi-like

--- a/config/default/zsh/.tmux.conf
+++ b/config/default/zsh/.tmux.conf
@@ -30,6 +30,9 @@ set-option -g status-interval 10
 ## emacs key bindings in tmux command prompt (prefix + :) are better than
 set-option -g status-keys emacs
 
+## vi key bindings in all modes
+setw -g mode-keys vi
+
 ## focus events enabled for terminals that support them
 set-option -g focus-events on
 
